# opencl-example

./: .gitignore  CMakeLists.txt  LICENSE  README  Tupfile  Tuprules.tup
cmake/Modules/: FindOpenCL.cmake
src/: CMakeLists.txt  example.cpp  main.cpp
